--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html lang="en">
 
 <head>
+    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,5 +13,7 @@
         Hola como estan el dia de hoy
     </p>
 </body>
+
+<script src='./script.js'></script>
 
 </html>
