Test to see a box hovering

--- a/index.html
+++ b/index.html
@@ -1,19 +1,18 @@
 <html lang="en">
+	<head>
+		<link rel="stylesheet" href="style.css" />
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta name="description" content="Hi! This is a test" />
+		<title>Test</title>
+	</head>
 
-<head>
-    <link rel="stylesheet" href="style.css">
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+	<body>
+		<div class="parent">
+			<div class="box" id="one">Hover me!</div>
+		</div>
+	</body>
 
-<body>
-    <p>
-        Hola como estan el dia de hoy
-    </p>
-</body>
-
-<script src='./script.js'></script>
-
+	<script src="./script.js"></script>
 </html>
