--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<meta name="description" content="Hi! This is a test" />
-		<title>Test</title>
+		<meta
+			name="description"
+			content="Awesome and satisfactory playground made by Dvd"
+		/>
+		<title>Satisfactory Squares</title>
 	</head>
 
 	<body>
