--- a/index.html
+++ b/index.html
@@ -12,7 +12,13 @@
 	</head>
 
 	<body>
-		<div class="parent">
+		<audio
+			id="click-audio"
+			src="./audio/click.mp3"
+			autoplay="false"
+		></audio>
+
+		<div class="parent" onclick="playSound();">
 			<div class="box"></div>
 			<div class="box"></div>
 			<div class="box"></div>
@@ -40,7 +46,7 @@
 			<div class="box"></div>
 			<div class="box"></div>
 		</div>
-		<div class="parent">
+		<div class="parent" onclick="playSound();">
 			<div class="box"></div>
 			<div class="box"></div>
 			<div class="box"></div>
@@ -68,7 +74,7 @@
 			<div class="box"></div>
 			<div class="box"></div>
 		</div>
-		<div class="parent">
+		<div class="parent" onclick="playSound();">
 			<div class="box"></div>
 			<div class="box"></div>
 			<div class="box"></div>
@@ -96,7 +102,7 @@
 			<div class="box"></div>
 			<div class="box"></div>
 		</div>
-		<div class="parent">
+		<div class="parent" onclick="playSound();">
 			<div class="box"></div>
 			<div class="box"></div>
 			<div class="box"></div>
@@ -124,7 +130,7 @@
 			<div class="box"></div>
 			<div class="box"></div>
 		</div>
-		<div class="parent">
+		<div class="parent" onclick="playSound();">
 			<div class="box"></div>
 			<div class="box"></div>
 			<div class="box"></div>
@@ -152,7 +158,7 @@
 			<div class="box"></div>
 			<div class="box"></div>
 		</div>
-		<div class="parent">
+		<div class="parent" onclick="playSound();">
 			<div class="box"></div>
 			<div class="box"></div>
 			<div class="box"></div>
@@ -180,7 +186,7 @@
 			<div class="box"></div>
 			<div class="box"></div>
 		</div>
-		<div class="parent">
+		<div class="parent" onclick="playSound();">
 			<div class="box"></div>
 			<div class="box"></div>
 			<div class="box"></div>
@@ -208,7 +214,7 @@
 			<div class="box"></div>
 			<div class="box"></div>
 		</div>
-		<div class="parent">
+		<div class="parent" onclick="playSound();">
 			<div class="box"></div>
 			<div class="box"></div>
 			<div class="box"></div>
@@ -236,7 +242,7 @@
 			<div class="box"></div>
 			<div class="box"></div>
 		</div>
-		<div class="parent">
+		<div class="parent" onclick="playSound();">
 			<div class="box"></div>
 			<div class="box"></div>
 			<div class="box"></div>
@@ -264,7 +270,7 @@
 			<div class="box"></div>
 			<div class="box"></div>
 		</div>
-		<div class="parent">
+		<div class="parent" onclick="playSound();">
 			<div class="box"></div>
 			<div class="box"></div>
 			<div class="box"></div>
@@ -292,7 +298,7 @@
 			<div class="box"></div>
 			<div class="box"></div>
 		</div>
-		<div class="parent">
+		<div class="parent" onclick="playSound();">
 			<div class="box"></div>
 			<div class="box"></div>
 			<div class="box"></div>
@@ -320,7 +326,7 @@
 			<div class="box"></div>
 			<div class="box"></div>
 		</div>
-		<div class="parent">
+		<div class="parent" onclick="playSound();">
 			<div class="box"></div>
 			<div class="box"></div>
 			<div class="box"></div>
