Fixed sound and onclick event

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			autoplay="false"
 		></audio>
 
-		<div class="parent" onclick="playSound();">
+		<div class="parent" onmousedown="playSound();">
 			<div class="box"></div>
 			<div class="box"></div>
 			<div class="box"></div>
@@ -47,7 +47,7 @@
 			<div class="box"></div>
 			<div class="box"></div>
 		</div>
-		<div class="parent" onclick="playSound();">
+		<div class="parent" onmousedown="playSound();">
 			<div class="box"></div>
 			<div class="box"></div>
 			<div class="box"></div>
@@ -75,7 +75,7 @@
 			<div class="box"></div>
 			<div class="box"></div>
 		</div>
-		<div class="parent" onclick="playSound();">
+		<div class="parent" onmousedown="playSound();">
 			<div class="box"></div>
 			<div class="box"></div>
 			<div class="box"></div>
@@ -103,7 +103,7 @@
 			<div class="box"></div>
 			<div class="box"></div>
 		</div>
-		<div class="parent" onclick="playSound();">
+		<div class="parent" onmousedown="playSound();">
 			<div class="box"></div>
 			<div class="box"></div>
 			<div class="box"></div>
@@ -131,7 +131,7 @@
 			<div class="box"></div>
 			<div class="box"></div>
 		</div>
-		<div class="parent" onclick="playSound();">
+		<div class="parent" onmousedown="playSound();">
 			<div class="box"></div>
 			<div class="box"></div>
 			<div class="box"></div>
@@ -159,7 +159,7 @@
 			<div class="box"></div>
 			<div class="box"></div>
 		</div>
-		<div class="parent" onclick="playSound();">
+		<div class="parent" onmousedown="playSound();">
 			<div class="box"></div>
 			<div class="box"></div>
 			<div class="box"></div>
@@ -187,7 +187,7 @@
 			<div class="box"></div>
 			<div class="box"></div>
 		</div>
-		<div class="parent" onclick="playSound();">
+		<div class="parent" onmousedown="playSound();">
 			<div class="box"></div>
 			<div class="box"></div>
 			<div class="box"></div>
@@ -215,7 +215,7 @@
 			<div class="box"></div>
 			<div class="box"></div>
 		</div>
-		<div class="parent" onclick="playSound();">
+		<div class="parent" onmousedown="playSound();">
 			<div class="box"></div>
 			<div class="box"></div>
 			<div class="box"></div>
@@ -243,7 +243,7 @@
 			<div class="box"></div>
 			<div class="box"></div>
 		</div>
-		<div class="parent" onclick="playSound();">
+		<div class="parent" onmousedown="playSound();">
 			<div class="box"></div>
 			<div class="box"></div>
 			<div class="box"></div>
@@ -271,7 +271,7 @@
 			<div class="box"></div>
 			<div class="box"></div>
 		</div>
-		<div class="parent" onclick="playSound();">
+		<div class="parent" onmousedown="playSound();">
 			<div class="box"></div>
 			<div class="box"></div>
 			<div class="box"></div>
@@ -299,7 +299,7 @@
 			<div class="box"></div>
 			<div class="box"></div>
 		</div>
-		<div class="parent" onclick="playSound();">
+		<div class="parent" onmousedown="playSound();">
 			<div class="box"></div>
 			<div class="box"></div>
 			<div class="box"></div>
@@ -327,7 +327,7 @@
 			<div class="box"></div>
 			<div class="box"></div>
 		</div>
-		<div class="parent" onclick="playSound();">
+		<div class="parent" onmousedown="playSound();">
 			<div class="box"></div>
 			<div class="box"></div>
 			<div class="box"></div>
